force custom and marquees

--- a/_comicScrapV2Custom/langs/default.xml
+++ b/_comicScrapV2Custom/langs/default.xml
@@ -54,7 +54,10 @@ inspired by ComicBook theme by TMNTturtleguy at https://github.com/TMNTturtleguy
 
 	<lang.boxes>display random covers</lang.boxes>
 
-	<lang.forceStyleConfig>pre-configured tiles</lang.forceStyleConfig>
+	<lang.forceCustoms>force custom pictures (if availables)</lang.forceCustoms>
+	<lang.forceCustomMarquees>allow custom marquees (if availables)</lang.forceCustomMarquees>
+
+	<lang.forceStyleConfig>pre-configured style</lang.forceStyleConfig>
 	<lang.manual>no (manual)</lang.manual>
 	<lang.allTilesMarquees>comic marquees (blocked config)</lang.allTilesMarquees>
 
