--- a/_comicScrapV2Custom/langs/default.xml
+++ b/_comicScrapV2Custom/langs/default.xml
@@ -46,6 +46,10 @@ inspired by ComicBook theme by TMNTturtleguy at https://github.com/TMNTturtleguy
 
 	<lang.carouselAnime>anime system logos</lang.carouselAnime>
 
+	<lang.crazyComix>crazy comix carousel</lang.crazyComix>
+	<lang.turner>sketch turner</lang.turner>
+	<lang.kowa>teenage mutants ninja turtles</lang.kowa>
+
 	<lang.character>display customizable characters</lang.character>
 	<lang.behindLogo>in tile behind logo</lang.behindLogo>
 	<lang.bottomRight>out of tiles at bottom right</lang.bottomRight>
