--- a/_comicScrapV2Custom/langs/default.xml
+++ b/_comicScrapV2Custom/langs/default.xml
@@ -61,7 +61,7 @@ inspired by ComicBook theme by TMNTturtleguy at https://github.com/TMNTturtleguy
 	<lang.forceCustoms>force peripherals custom pictures (if availables)</lang.forceCustoms>
 	<lang.forceCustomMarquees>allow custom marquees (if availables)</lang.forceCustomMarquees>
 
-	<lang.forceStyleConfig>pre-configured style</lang.forceStyleConfig>
+	<lang.forceStyleConfig>pre-configured style (can need to be actived to times to work)</lang.forceStyleConfig>
 	<lang.manual>no (manual)</lang.manual>
 	<lang.allTilesMarquees>comic marquees (blocked config)</lang.allTilesMarquees>
 
